--- a/first_webpage/index.html
+++ b/first_webpage/index.html
@@ -12,7 +12,7 @@
 
     <h2>H2 Heading</h2>
     <p>As a best practice, your webpage should have just one<br> 
-    <pre>&lt;h1&gt;&lt;/h1&gt; element</pre></p>
+    <code>&lt;h1&gt;&lt;/h1&gt;</code>element</p>
 
     <h3>h3 Heading</h3>
     <p>This test is too simple to fail.<br>
@@ -24,7 +24,7 @@
     <h4>H4 Heading</h4>
     <p>Use the file structure that will be shown here below</p>
     <pre>
-:::first_webpage:::
+    :::first_webpage:::
         |
         --------:::index.html:::
         |
